line intersection tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,16 @@ target_link_libraries(vis
 )
 
 
+add_executable(lines
+	src/lines_gui.cpp src/lines_gui.h
+	src/geo_algos.h src/math_algos.h
+)
+
+target_link_libraries(lines
+	Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Svg
+)
+
+
 add_executable(caster
 	src/caster_gui.cpp src/caster_gui.h
 )
