continued with linesegment voronoi regions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(Qt5Gui REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Svg REQUIRED)
 find_package(Boost REQUIRED)
+find_package(Threads REQUIRED)
 
 
 set(CMAKE_AUTOUIC ON)
@@ -61,6 +62,7 @@ add_executable(lines
 
 target_link_libraries(lines
 	Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Svg
+	Threads::Threads
 )
 
 
